--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <h1> Maze Generator </h1>
-
+<div class="content">
 <div> 
   Taille :
   <input [(ngModel)]="size[0]" type="number" />
@@ -25,8 +25,8 @@
 <div> 
   <button (click)="findPath()"> Solve </button>
 </div>
-
-<canvas #canvas id="canvas"></canvas>
+</div>
+<app-three-maze [maze]="maze()"> </app-three-maze>
 
 
 
