--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,33 +1,30 @@
 <h1> Maze Generator </h1>
 <div class="content">
-<div> 
-  Taille :
-  <input [(ngModel)]="size[0]" type="number" />
-  <input [(ngModel)]="size[1]" type="number" />
-  <input [(ngModel)]="size[2]" type="number" />
+  <div>
+    Taille :
+    <input [(ngModel)]="size[0]" type="number" />
+    <input [(ngModel)]="size[1]" type="number" />
+    <input [(ngModel)]="size[2]" type="number" />
+  </div>
+  <div>
+    <button (click)="generateMaze()"> Generate </button>
+  </div>
+
+  <div> Start :
+    <input [(ngModel)]="start[0]" type="number" />
+    <input [(ngModel)]="start[1]" type="number" />
+    <input [(ngModel)]="start[2]" type="number" />
+  </div>
+
+  <div> Stop :
+    <input [(ngModel)]="stop[0]" type="number" />
+    <input [(ngModel)]="stop[1]" type="number" />
+    <input [(ngModel)]="stop[2]" type="number" />
+  </div>
+
+  <div>
+    <button (click) = "updateStartStop()"> Mettre a jour </button>
+    <button (click)="findPath()"> Solve </button>
+  </div>
 </div>
-<div>
-  <button (click)="generateMaze()"> Generate </button>
-</div>
-
-<div> Start : 
-  <input [(ngModel)]="start[0]" type="number" /> 
-  <input [(ngModel)]="start[1]" type="number" />
-  <input [(ngModel)]="start[2]" type="number" />
-</div>
-
-<div> Stop : 
-  <input [(ngModel)]="stop[0]" type="number" /> 
-  <input [(ngModel)]="stop[1]" type="number" />
-  <input [(ngModel)]="stop[2]" type="number" />
-</div>
-
-<div> 
-  <button (click)="findPath()"> Solve </button>
-</div>
-</div>
-<app-three-maze [maze]="maze()"> </app-three-maze>
-
-
-
-
+<app-three-maze [maze]="maze()" [start]="start" [stop]="stop"> </app-three-maze>
