--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,11 +1,21 @@
+input {
+    width: 100%;
+    padding: 2px;
+    margin: 2px 0;
+    box-sizing: border-box;   
+}
+
 .content {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    display: flex;
-    justify-content: right;
-    align-items: right;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
     z-index: 10;
+}
+
+.placeholder {
+    grid-column: span 3/ span 3;
 }
