--- a/src/app/components/three-maze/three-maze.component.scss
+++ b/src/app/components/three-maze/three-maze.component.scss
@@ -1,8 +1,7 @@
 canvas {
     width: 100%;
     height: 100%;
-    display: block;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     z-index: 1;
